--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
 
           <li>
-            <a href="https://docs.google.com/document/d/1B1PFmkUFHs5gAzCq92lDwMbKzPG_kBVJ/edit?usp=drive_link&ouid=106161626821577311063&rtpof=true&sd=true" target="_blank" class="navbar-link">Resume.</a>
+            <a href=https://docs.google.com/document/d/1hbPSR9rFJedY3vYEDRkU5-Pqm65SmtUW/edit?usp=drive_link&ouid=106161626821577311063&rtpof=true&sd=true"" target="_blank" class="navbar-link">Resume.</a>
           </li>
 
           <li>
